src/app/core/views/navbar/room/room.component.css
h1 {
  font-size : calc(.5vw + 10px);
}

li {
  list-style : none;
  padding    : 4px 0;
}

.wrapper {
  border     : 1px solid hsla(0, 0%, 50%, 1);
  background : hsla(0, 0%, 32%, 0.7);
}

.box-messages {
  height     : 340px;
  overflow-y : auto;
  background : rgba(85, 85, 85, 0.85);
}

.box-messages ul {
  padding    : 4px 16px;
  word-break : break-all;
}

li .sender {
  color       : #bbb;
  font-weight : 400;
}

#userName {
  border-top: 1px solid hsla(0, 0%, 37%, 1);
}

.box-form {
  position : relative;
  width    : 100%;
}

.box-form .btn-square {
  position         : relative;
  background-color : rgba(0, 0, 0, 0.1);
  border           : none;
}

.box-form .btn-square:hover {
  background-color : rgb(99, 99, 99);
}

.box-form .btn-square:focus {
  background-color : rgb(123, 123, 123);
}

.box-form .btn-square span {
  top  : -1px;
  left : -1px;
}

.box-users {
  display         : flex;
  flex-direction  : column;
  justify-content : space-between;
}

.box-users .box-from {
  padding : 10px 4px;
}

.box-users h4:first-of-type {
  text-align : center;
}

.box-users ul {
  padding   : 0;
  margin    : 5px auto;
  font-size : 1.2em;
}

.buttons > .btn-square {
  opacity    : 0;
  visibility : hidden;
  animation  : slideOutDown .2s cubic-bezier(0, 0, 0.2, 1);
}

.buttons.btn-shown > .btn-square {
  opacity    : 1;
  visibility : visible;
  animation  : slideInDown .2s cubic-bezier(0, 0, 0.2, 1);
}

.box-users form label {
  display: block;
}

.box-users input {
  padding-right: 65px;
}

.wrapper .row .animation-delay-0 {
  animation-delay : 0ms;
}

.wrapper .row .animation-delay-1 {
  animation-delay : 75ms;
}

@media (min-width : 768px) {
  .wrapper .row {
    display : flex;
  }

  .box-chat {
    padding-right : 0;
    border-right  : 1px solid hsla(0, 0%, 50%, 1);
  }

  .box-users {
    padding-left : 0;
  }
}

@keyframes slideInDown {
  from {
    top : -20px;
  }
  to {
    top : 0;
  }
}

@keyframes slideOutDown {
  from {
    top : 0;
  }
  to {
    top : 20px;
  }
}

